[project]
name = "GitScout"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "celery>=5.6.2",
    "colorama>=0.4.6",
    "discord-webhook>=1.4.1",
    "langchain>=1.2.6",
    "langchain-community>=0.4.1",
    "langchain-google-genai>=4.2.0",
    "langchain-groq>=1.1.2",
    "langgraph>=1.0.6",
    "langsmith>=0.6.4",
    "pygithub>=2.8.1",
    "python-dotenv>=1.2.1",
    "redis>=7.1.0",
    "slack-bolt>=1.27.0",
    "textual>=7.5.0",
    "tree-sitter>=0.25.2",
    "tree-sitter-languages>=1.10.2",
]
